--- a/SharePointPrimitives.Stsadm.CommandWrapper/SharePointPrimitives.Stsadm.CommandWrapper.csproj
+++ b/SharePointPrimitives.Stsadm.CommandWrapper/SharePointPrimitives.Stsadm.CommandWrapper.csproj
@@ -46,6 +46,7 @@
       <HintPath>Libraries\Microsoft.SharePoint.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
